<resources>
    <string name="app_name">JL CABELO E ESTÉTICA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_comandas">Comandas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_despesas">Despesas</string>
    <string name="menu_relatorio">Relatórios</string>
    <string name="menu_funcionario">Funcionários</string>
    <string name="menu_tabela">Tabela de Preços</string>
</resources>