<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_comandas" />
        <item

            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_cliente"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_tablePrices"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/menu_tabela" />
        <item
                android:id="@+id/nav_despesas"
                android:icon="@drawable/ic_menu_despesas"
                android:title="@string/menu_despesas" />
        <item
                android:id="@+id/nav_relatorios"
                android:icon="@drawable/ic_menu_relatorios"
                android:title="@string/menu_relatorio" />
        <item
                android:id="@+id/nav_funcionarios"
                android:icon="@drawable/ic_menu_funcionario"
                android:title="@string/menu_funcionario" />
    </group>
</menu>